--- a/languages/cherry-white-label-de_DE.po
+++ b/languages/cherry-white-label-de_DE.po
@@ -2,8 +2,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: cherry-white-label\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2015-11-05 18:58+0200\n"
-"PO-Revision-Date: 2015-11-05 18:58+0200\n"
+"POT-Creation-Date: 2015-12-11 16:01+0200\n"
+"PO-Revision-Date: 2015-12-11 16:01+0200\n"
 "Last-Translator: J.L.Dokter <jldokter@gmail.com>\n"
 "Language-Team: Cherry Team <support@cherryframework.com>\n"
 "Language: de_DE\n"
@@ -20,205 +20,208 @@ msgstr ""
 "X-Poedit-Basepath: ..\n"
 "X-Poedit-SearchPath-0: .\n"
 
-#: includes/cherry-white-label-init.php:270
+#: includes/cherry-white-label-init.php:249
 msgid "Get Started"
-msgstr ""
+msgstr "Los geht's"
+
+#: includes/cherry-white-label-init.php:250
+msgid "Customize Your Site"
+msgstr "Anpassung der Website"
+
+#: includes/cherry-white-label-init.php:251
+msgid "or, <a href=\""
+msgstr "oder <a href=“"
+
+#: includes/cherry-white-label-init.php:256
+msgid "Next Steps"
+msgstr "Die nächsten Schritte"
+
+#: includes/cherry-white-label-init.php:260
+#: includes/cherry-white-label-init.php:263
+msgid "Edit your front page"
+msgstr "Bearbeiten Sie Ihre Titelseite"
+
+#: includes/cherry-white-label-init.php:261
+#: includes/cherry-white-label-init.php:264
+msgid "Add additional pages"
+msgstr "Zusätzliche Seiten hinzufügen"
+
+#: includes/cherry-white-label-init.php:265
+msgid "Add a blog post"
+msgstr "Blogebeitrag hinzufügen"
+
+#: includes/cherry-white-label-init.php:267
+msgid "Write your first blog post"
+msgstr "Ihren ersten Blogbeitrag schreiben"
+
+#: includes/cherry-white-label-init.php:268
+msgid "Add an About page"
+msgstr "Eine Über uns Seite hinzufügen"
 
 #: includes/cherry-white-label-init.php:271
-msgid "Customize Your Site"
-msgstr ""
-
-#: includes/cherry-white-label-init.php:272
-msgid "or, <a href=\""
-msgstr ""
+msgid "View your site"
+msgstr "Sehen Sie sich Ihre Website an"
 
 #: includes/cherry-white-label-init.php:277
-msgid "Next Steps"
-msgstr ""
-
-#: includes/cherry-white-label-init.php:282
-#: includes/cherry-white-label-init.php:287
-msgid "Edit your front page"
-msgstr ""
-
-#: includes/cherry-white-label-init.php:283
-#: includes/cherry-white-label-init.php:288
-msgid "Add additional pages"
-msgstr ""
-
-#: includes/cherry-white-label-init.php:289
-msgid "Add a blog post"
-msgstr ""
-
-#: includes/cherry-white-label-init.php:293
-msgid "Write your first blog post"
-msgstr ""
-
-#: includes/cherry-white-label-init.php:294
-msgid "Add an About page"
-msgstr ""
-
-#: includes/cherry-white-label-init.php:297
-msgid "View your site"
-msgstr ""
-
-#: includes/cherry-white-label-init.php:303
 msgid "More Actions"
-msgstr ""
+msgstr "Mehr Aktionen"
 
-#: includes/cherry-white-label-init.php:305
+#: includes/cherry-white-label-init.php:279
 msgid "Manage <a href=\""
-msgstr ""
+msgstr "<a href=\" verwalten"
 
-#: includes/cherry-white-label-init.php:306
+#: includes/cherry-white-label-init.php:280
 msgid "Turn comments on or off"
-msgstr ""
+msgstr "Kommentare ein- ausschalten"
 
-#: includes/cherry-white-label-init.php:307
+#: includes/cherry-white-label-init.php:281
 msgid "http://codex.wordpress.org/First_Steps_With_WordPress"
-msgstr ""
+msgstr "http://codex.wordpress.org/First_Steps_With_WordPress"
 
-#: includes/cherry-white-label-init.php:307
+#: includes/cherry-white-label-init.php:281
 msgid "Learn more about getting started"
-msgstr ""
+msgstr "Erfahren Sie mehr über die ersten Schritte"
 
-#: includes/cherry-white-label-init.php:973
+#: includes/cherry-white-label-init.php:854
 msgid "Saved successfully"
-msgstr ""
+msgstr "Erfolgreich gespeichert"
 
-#: includes/cherry-white-label-init.php:1033
+#: includes/cherry-white-label-init.php:909
 msgid "Error validate data"
-msgstr ""
+msgstr "Fehler beim Daten validieren"
 
-#: templates/admin/page-settings.php:1
+#: templates/admin/page-settings.php:13
 msgid "White Label"
-msgstr ""
+msgstr "White Label"
 
-#: templates/admin/page-settings.php:8 templates/admin/page-settings.php:17
+#: templates/admin/page-settings.php:20 templates/admin/page-settings.php:29
 msgid "Dismiss this notice."
-msgstr ""
+msgstr "Diese Meldung nicht beachten."
 
-#: templates/admin/page-settings.php:24
+#: templates/admin/page-settings.php:36
 msgid "Tab brand"
-msgstr ""
+msgstr "Tab Marke"
 
-#: templates/admin/page-settings.php:29
+#: templates/admin/page-settings.php:41
 msgid "Admin bar"
-msgstr ""
+msgstr "Admin-Bar"
 
-#: templates/admin/page-settings.php:33
+#: templates/admin/page-settings.php:45
 msgid "Hide Admin Bar logo:"
-msgstr ""
+msgstr " Admin Bar Logo ausblenden:"
 
-#: templates/admin/page-settings.php:39
+#: templates/admin/page-settings.php:51
 msgid "Upload your Logo 16x16px:"
-msgstr ""
+msgstr "Laden Sie Ihr Logo 16x16px hoch:"
 
-#: templates/admin/page-settings.php:49 templates/admin/page-settings.php:74
-#: templates/admin/page-settings.php:156 templates/admin/page-settings.php:175
+#: templates/admin/page-settings.php:61 templates/admin/page-settings.php:86
+#: templates/admin/page-settings.php:168 templates/admin/page-settings.php:187
 msgid "Browse"
-msgstr ""
+msgstr "Durchsuchen:"
 
-#: templates/admin/page-settings.php:51 templates/admin/page-settings.php:76
-#: templates/admin/page-settings.php:158 templates/admin/page-settings.php:177
+#: templates/admin/page-settings.php:63 templates/admin/page-settings.php:88
+#: templates/admin/page-settings.php:170 templates/admin/page-settings.php:189
 msgid "Remove"
-msgstr ""
+msgstr "entfernen"
 
-#: templates/admin/page-settings.php:60
+#: templates/admin/page-settings.php:72
 msgid "Welcome Panel settings"
-msgstr ""
+msgstr "Begrüßungs Panel-Einstellungen"
 
-#: templates/admin/page-settings.php:64
+#: templates/admin/page-settings.php:76
 msgid "Add Welcome Panel logo:"
-msgstr ""
-
-#: templates/admin/page-settings.php:83
-msgid "Welcome Panel heading:"
-msgstr ""
-
-#: templates/admin/page-settings.php:89
-msgid "Welcome Panel text:"
-msgstr ""
+msgstr "Begrüßungs Panel-Logo hinzufügen"
 
 #: templates/admin/page-settings.php:95
-msgid "Add your own Welcome Panel?:"
-msgstr ""
+msgid "Welcome Panel heading:"
+msgstr "Begrüßungs Panel Überschrift:"
 
 #: templates/admin/page-settings.php:101
+msgid "Welcome Panel text:"
+msgstr "Begrüßungs Panel Text:"
+
+#: templates/admin/page-settings.php:107
+msgid "Add your own Welcome Panel?:"
+msgstr "Eigene Begrüßung Panel hizufügen?"
+
+#: templates/admin/page-settings.php:113
 msgid "Visible To:"
-msgstr ""
+msgstr "﻿Sichtbar für"
 
-#: templates/admin/page-settings.php:115
+#: templates/admin/page-settings.php:127
 msgid "Footer"
-msgstr ""
-
-#: templates/admin/page-settings.php:119
-msgid "Hide Wordpress version:"
-msgstr ""
-
-#: templates/admin/page-settings.php:125
-msgid "Developer Website Name:"
-msgstr ""
+msgstr "Footer"
 
 #: templates/admin/page-settings.php:131
+msgid "Hide Wordpress version:"
+msgstr "Wordpress Version ausblenden"
+
+#: templates/admin/page-settings.php:137
+msgid "Developer Website Name:"
+msgstr " Website Entwickler Name:"
+
+#: templates/admin/page-settings.php:143
 msgid "Developer Website URL:"
-msgstr ""
+msgstr " Website Entwickler URL"
 
-#: templates/admin/page-settings.php:135
+#: templates/admin/page-settings.php:147
 msgid "Example: http://your-website.com"
-msgstr ""
+msgstr "Beispiel : http://your-website.com"
 
-#: templates/admin/page-settings.php:142
+#: templates/admin/page-settings.php:154
 msgid "Login"
-msgstr ""
+msgstr "Login"
 
-#: templates/admin/page-settings.php:146
+#: templates/admin/page-settings.php:158
 msgid "Custom login logo:"
-msgstr ""
+msgstr "Benutzerdefiniertes Login Logo:"
 
-#: templates/admin/page-settings.php:165
+#: templates/admin/page-settings.php:177
 msgid "Login page Background:"
-msgstr ""
+msgstr "Login-Seite Hintergrund:"
 
-#: templates/admin/page-settings.php:184
+#: templates/admin/page-settings.php:196
 msgid "Custom login css:"
-msgstr ""
+msgstr "Benutzerdefiniertes Login-CSS"
 
-#: templates/admin/page-settings.php:194
+#: templates/admin/page-settings.php:206
 msgid "Dashboard settings"
-msgstr ""
-
-#: templates/admin/page-settings.php:200
-msgid "Hide Help Box:"
-msgstr ""
-
-#: templates/admin/page-settings.php:204
-msgid "This setting will hide \"help box\" bar on dashboard section"
-msgstr ""
-
-#: templates/admin/page-settings.php:209
-msgid "Hide Screen Options:"
-msgstr ""
+msgstr "Dashboard Einstellungen"
 
 #: templates/admin/page-settings.php:212
+msgid "Hide Help Box:"
+msgstr "Hilfe Box ausblenden:"
+
+#: templates/admin/page-settings.php:216
+msgid "This setting will hide \"help box\" bar on dashboard section"
+msgstr ""
+"Diese Einstellung wird Hilfe Box Leiste in der Dashboard Sektion ausblenden"
+
+#: templates/admin/page-settings.php:221
+msgid "Hide Screen Options:"
+msgstr "Ausblenden von Bildschirmoptionen:"
+
+#: templates/admin/page-settings.php:224
 msgid "This setting will hide \"screen option\" bar on dashboard section"
 msgstr ""
+"Diese Einstellung wird Bildschirmeinstellunegn in der Dashboard Sektion "
+"ausblenden"
 
-#: templates/admin/page-settings.php:219
+#: templates/admin/page-settings.php:231
 msgid "Authorization settings"
-msgstr ""
+msgstr "Autorisierungeinstellungen"
 
-#: templates/admin/page-settings.php:226
+#: templates/admin/page-settings.php:238
 msgid "Change Admin Panel Slug:"
-msgstr ""
-
-#: templates/admin/page-settings.php:232
-msgid "Change Forgot Password Slug:"
-msgstr ""
+msgstr "Admin Panel Slug ändern :"
 
 #: templates/admin/page-settings.php:244
+msgid "Change Forgot Password Slug:"
+msgstr "\"Passwort vergessen\"- Slug ändern:"
+
+#: templates/admin/page-settings.php:256
 msgid "Save Change"
-msgstr ""
+msgstr "Änderungen speichern"
 
 #~ msgid "Title"
 #~ msgstr "Titel"
