--- a/languages/cherry-white-label-pl_PL.po
+++ b/languages/cherry-white-label-pl_PL.po
@@ -2,8 +2,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: cherry-white-label\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2015-11-05 18:58+0200\n"
-"PO-Revision-Date: 2015-11-05 18:58+0200\n"
+"POT-Creation-Date: 2015-12-11 15:59+0200\n"
+"PO-Revision-Date: 2015-12-11 15:59+0200\n"
 "Last-Translator: J.L.Dokter <jldokter@gmail.com>\n"
 "Language-Team: Cherry Team <support@cherryframework.com>\n"
 "Language: pl_PL\n"
@@ -20,205 +20,207 @@ msgstr ""
 "X-Poedit-Basepath: ..\n"
 "X-Poedit-SearchPath-0: .\n"
 
-#: includes/cherry-white-label-init.php:270
+#: includes/cherry-white-label-init.php:249
 msgid "Get Started"
-msgstr ""
+msgstr "Pierwsze kroki"
+
+#: includes/cherry-white-label-init.php:250
+msgid "Customize Your Site"
+msgstr "Dostosuj swoją stronę"
+
+#: includes/cherry-white-label-init.php:251
+msgid "or, <a href=\""
+msgstr "lub, <a href=\""
+
+#: includes/cherry-white-label-init.php:256
+msgid "Next Steps"
+msgstr "Następne kroki"
+
+#: includes/cherry-white-label-init.php:260
+#: includes/cherry-white-label-init.php:263
+msgid "Edit your front page"
+msgstr "Edytuj stronę tytułową"
+
+#: includes/cherry-white-label-init.php:261
+#: includes/cherry-white-label-init.php:264
+msgid "Add additional pages"
+msgstr "Dodaj dodatkowe strony"
+
+#: includes/cherry-white-label-init.php:265
+msgid "Add a blog post"
+msgstr "Dodaj wpis na blogu"
+
+#: includes/cherry-white-label-init.php:267
+msgid "Write your first blog post"
+msgstr "Napisz swój pierwszy wpis na blogu"
+
+#: includes/cherry-white-label-init.php:268
+msgid "Add an About page"
+msgstr "Dodaj stronę O"
 
 #: includes/cherry-white-label-init.php:271
-msgid "Customize Your Site"
-msgstr ""
-
-#: includes/cherry-white-label-init.php:272
-msgid "or, <a href=\""
-msgstr ""
+msgid "View your site"
+msgstr "Zobacz swoją witrynę"
 
 #: includes/cherry-white-label-init.php:277
-msgid "Next Steps"
-msgstr ""
-
-#: includes/cherry-white-label-init.php:282
-#: includes/cherry-white-label-init.php:287
-msgid "Edit your front page"
-msgstr ""
-
-#: includes/cherry-white-label-init.php:283
-#: includes/cherry-white-label-init.php:288
-msgid "Add additional pages"
-msgstr ""
-
-#: includes/cherry-white-label-init.php:289
-msgid "Add a blog post"
-msgstr ""
-
-#: includes/cherry-white-label-init.php:293
-msgid "Write your first blog post"
-msgstr ""
-
-#: includes/cherry-white-label-init.php:294
-msgid "Add an About page"
-msgstr ""
-
-#: includes/cherry-white-label-init.php:297
-msgid "View your site"
-msgstr ""
-
-#: includes/cherry-white-label-init.php:303
 msgid "More Actions"
-msgstr ""
+msgstr "Więcej czynności"
 
-#: includes/cherry-white-label-init.php:305
+#: includes/cherry-white-label-init.php:279
 msgid "Manage <a href=\""
-msgstr ""
+msgstr "Zarządzaj <a href=\""
 
-#: includes/cherry-white-label-init.php:306
+#: includes/cherry-white-label-init.php:280
 msgid "Turn comments on or off"
-msgstr ""
+msgstr "Włącz lub wyłącz komentarze"
 
-#: includes/cherry-white-label-init.php:307
+#: includes/cherry-white-label-init.php:281
 msgid "http://codex.wordpress.org/First_Steps_With_WordPress"
-msgstr ""
+msgstr "http://codex.wordpress.org/First_Steps_With_WordPress"
 
-#: includes/cherry-white-label-init.php:307
+#: includes/cherry-white-label-init.php:281
 msgid "Learn more about getting started"
-msgstr ""
+msgstr "Dowiedz się więcej o pierwszych krokach"
 
-#: includes/cherry-white-label-init.php:973
+#: includes/cherry-white-label-init.php:854
 msgid "Saved successfully"
-msgstr ""
+msgstr "Zapisano pomyślnie"
 
-#: includes/cherry-white-label-init.php:1033
+#: includes/cherry-white-label-init.php:909
 msgid "Error validate data"
-msgstr ""
+msgstr "Błąd walidacji danych"
 
-#: templates/admin/page-settings.php:1
+#: templates/admin/page-settings.php:13
 msgid "White Label"
-msgstr ""
+msgstr "White Label"
 
-#: templates/admin/page-settings.php:8 templates/admin/page-settings.php:17
+#: templates/admin/page-settings.php:20 templates/admin/page-settings.php:29
 msgid "Dismiss this notice."
-msgstr ""
+msgstr "Odrzuć to zawiadomienie."
 
-#: templates/admin/page-settings.php:24
+#: templates/admin/page-settings.php:36
 msgid "Tab brand"
-msgstr ""
+msgstr "Rodzaj karty"
 
-#: templates/admin/page-settings.php:29
+#: templates/admin/page-settings.php:41
 msgid "Admin bar"
-msgstr ""
+msgstr "Panel admina"
 
-#: templates/admin/page-settings.php:33
+#: templates/admin/page-settings.php:45
 msgid "Hide Admin Bar logo:"
-msgstr ""
+msgstr "Ukryj logo panelu admina:"
 
-#: templates/admin/page-settings.php:39
+#: templates/admin/page-settings.php:51
 msgid "Upload your Logo 16x16px:"
-msgstr ""
+msgstr "Prześlij swoje logo 16x16 px"
 
-#: templates/admin/page-settings.php:49 templates/admin/page-settings.php:74
-#: templates/admin/page-settings.php:156 templates/admin/page-settings.php:175
+#: templates/admin/page-settings.php:61 templates/admin/page-settings.php:86
+#: templates/admin/page-settings.php:168 templates/admin/page-settings.php:187
 msgid "Browse"
-msgstr ""
+msgstr "Przeglądaj"
 
-#: templates/admin/page-settings.php:51 templates/admin/page-settings.php:76
-#: templates/admin/page-settings.php:158 templates/admin/page-settings.php:177
+#: templates/admin/page-settings.php:63 templates/admin/page-settings.php:88
+#: templates/admin/page-settings.php:170 templates/admin/page-settings.php:189
 msgid "Remove"
-msgstr ""
+msgstr "Usuń"
 
-#: templates/admin/page-settings.php:60
+#: templates/admin/page-settings.php:72
 msgid "Welcome Panel settings"
-msgstr ""
+msgstr "Ustawienia panelu powitania"
 
-#: templates/admin/page-settings.php:64
+#: templates/admin/page-settings.php:76
 msgid "Add Welcome Panel logo:"
-msgstr ""
-
-#: templates/admin/page-settings.php:83
-msgid "Welcome Panel heading:"
-msgstr ""
-
-#: templates/admin/page-settings.php:89
-msgid "Welcome Panel text:"
-msgstr ""
+msgstr "Dodaj logo panelu powitania:"
 
 #: templates/admin/page-settings.php:95
-msgid "Add your own Welcome Panel?:"
-msgstr ""
+msgid "Welcome Panel heading:"
+msgstr "Nagłówek panelu powitania:"
 
 #: templates/admin/page-settings.php:101
+msgid "Welcome Panel text:"
+msgstr "Tekst panelu powitania:"
+
+#: templates/admin/page-settings.php:107
+msgid "Add your own Welcome Panel?:"
+msgstr "Dodaj własny panel powitania?:"
+
+#: templates/admin/page-settings.php:113
 msgid "Visible To:"
-msgstr ""
+msgstr "Widoczne dla:"
 
-#: templates/admin/page-settings.php:115
+#: templates/admin/page-settings.php:127
 msgid "Footer"
-msgstr ""
-
-#: templates/admin/page-settings.php:119
-msgid "Hide Wordpress version:"
-msgstr ""
-
-#: templates/admin/page-settings.php:125
-msgid "Developer Website Name:"
-msgstr ""
+msgstr "Stopka"
 
 #: templates/admin/page-settings.php:131
+msgid "Hide Wordpress version:"
+msgstr "Schowaj wersję Wordpress'a:"
+
+#: templates/admin/page-settings.php:137
+msgid "Developer Website Name:"
+msgstr "Nazwa witryny dewelopera:"
+
+#: templates/admin/page-settings.php:143
 msgid "Developer Website URL:"
-msgstr ""
+msgstr "URL witryny dewelopera:"
 
-#: templates/admin/page-settings.php:135
+#: templates/admin/page-settings.php:147
 msgid "Example: http://your-website.com"
-msgstr ""
+msgstr "Przykład: http://your-website.com"
 
-#: templates/admin/page-settings.php:142
+#: templates/admin/page-settings.php:154
 msgid "Login"
-msgstr "Nazwa użytkownika"
+msgstr "Logowanie"
 
-#: templates/admin/page-settings.php:146
+#: templates/admin/page-settings.php:158
 msgid "Custom login logo:"
-msgstr ""
+msgstr "Niestandardowe logo logowania:"
 
-#: templates/admin/page-settings.php:165
+#: templates/admin/page-settings.php:177
 msgid "Login page Background:"
-msgstr ""
+msgstr "Tło strony logowania:"
 
-#: templates/admin/page-settings.php:184
+#: templates/admin/page-settings.php:196
 msgid "Custom login css:"
-msgstr ""
+msgstr "CSS niestandardowego logowania:"
 
-#: templates/admin/page-settings.php:194
+#: templates/admin/page-settings.php:206
 msgid "Dashboard settings"
-msgstr ""
-
-#: templates/admin/page-settings.php:200
-msgid "Hide Help Box:"
-msgstr ""
-
-#: templates/admin/page-settings.php:204
-msgid "This setting will hide \"help box\" bar on dashboard section"
-msgstr ""
-
-#: templates/admin/page-settings.php:209
-msgid "Hide Screen Options:"
-msgstr ""
+msgstr "Ustawienia tablicy rozdzielczej"
 
 #: templates/admin/page-settings.php:212
+msgid "Hide Help Box:"
+msgstr "Schowaj Box pomocy:"
+
+#: templates/admin/page-settings.php:216
+msgid "This setting will hide \"help box\" bar on dashboard section"
+msgstr ""
+"Te ustawienia ukryją panel \"box'u pomocy\" w sekcji tablicy rozdzielczej"
+
+#: templates/admin/page-settings.php:221
+msgid "Hide Screen Options:"
+msgstr "Ukryj opcje ekranu"
+
+#: templates/admin/page-settings.php:224
 msgid "This setting will hide \"screen option\" bar on dashboard section"
 msgstr ""
+"Te ustawienia ukryją panel \"opcji ekranu\" w sekcji tablicy rozdzielczej"
 
-#: templates/admin/page-settings.php:219
+#: templates/admin/page-settings.php:231
 msgid "Authorization settings"
-msgstr ""
+msgstr "Ustawienia autoryzacji"
 
-#: templates/admin/page-settings.php:226
+#: templates/admin/page-settings.php:238
 msgid "Change Admin Panel Slug:"
-msgstr ""
-
-#: templates/admin/page-settings.php:232
-msgid "Change Forgot Password Slug:"
-msgstr ""
+msgstr "Zmień slug'a panelu admina"
 
 #: templates/admin/page-settings.php:244
+msgid "Change Forgot Password Slug:"
+msgstr "Zmień slug'a Nie pamiętasz hasło:"
+
+#: templates/admin/page-settings.php:256
 msgid "Save Change"
-msgstr ""
+msgstr "Zapisz zmiany"
 
 #~ msgid "Title"
 #~ msgstr "Tytuł"
